remove workarounds, fix issues